--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,32 @@
       {
         "src": "index5.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "build/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "index.js"
+        "src": "/products",
+        "dest": "index5.js"
+      },
+      {
+        "src": "/products/(.*)",
+        "dest": "index5.js"
+      },
+      {
+        "src": "/add",
+        "dest": "build/index.html"
+      },
+      {
+        "src": "/",
+        "dest": "build/index.html"
+      },
+      {
+        "src": "/(.+)",
+        "dest": "build/$1"
       }
     ]
   }
