--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,34 @@
 {
     "builds": [
       {
-        "src": "index5.js",
+        "src": "index.js",
         "use": "@vercel/node"
       },
       {
-        "src": "build/**",
+        "src": "dist/**",
         "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/products",
-        "dest": "index5.js"
+        "dest": "index.js"
       },
       {
         "src": "/products/(.*)",
-        "dest": "index5.js"
+        "dest": "index.js"
       },
       {
         "src": "/add",
-        "dest": "build/index.html"
+        "dest": "dist/index.html"
       },
       {
         "src": "/",
-        "dest": "build/index.html"
+        "dest": "dist/index.html"
       },
       {
         "src": "/(.+)",
-        "dest": "build/$1"
+        "dest": "dist/$1"
       }
     ]
   }
